# wayland-protocols

./: .gitlab-ci.yml  GOVERNANCE.md  Makefile.am  README.md  meson.build
.gitlab-ci/: debian-install.sh
stable/linux-dmabuf/: linux-dmabuf-v1.xml
stable/presentation-time/: presentation-time.xml
stable/tablet/: tablet-v2.xml
stable/xdg-shell/: xdg-shell.xml
staging/alpha-modifier/: alpha-modifier-v1.xml
staging/blender/: README  blender-v1.xml
staging/color-management/: color-management-v1.xml
staging/color-representation/: notes.rst
staging/commit-timing/: commit-timing-v1.xml
staging/cursor-shape/: cursor-shape-v1.xml
staging/ext-action-binder/: README  ext-action-binder-v1.xml
staging/ext-ei-region-mapper/: README  ext-ei-region-mapper-v1.xml
staging/ext-ei-session/: README  ext-ei-session-v1.xml
staging/ext-foreign-toplevel-list/: ext-foreign-toplevel-list-v1.xml
staging/ext-foreign-toplevel-management/: README  ext-foreign-toplevel-management-v1.xml
staging/ext-foreign-toplevel-state/: README  ext-foreign-toplevel-state-v1.xml
staging/ext-sensitive-context/: README  ext-sensitive-context-v1.xml
staging/ext-virtual-keyboard/: README
staging/ext-workspace/: ext-workspace-v1.xml
staging/ext-zones/: ext-zones-v1.xml
staging/fifo/: fifo-v1.xml
staging/fractional-scale/: README  fractional-scale-v2.xml
staging/idle-inhibit/: idle-inhibit-v1.xml
staging/input-method/: README  input-method-v3.xml
staging/input-timestamps/: input-timestamps-v1.xml
staging/keyboard-shortcuts-inhibit/: keyboard-shortcuts-inhibit-v1.xml
staging/pointer-constraints/: pointer-constraints-v1.xml
staging/pointer-gestures/: pointer-gestures-v1.xml
staging/pointer-warp/: pointer-warp-v1.xml
staging/primary-selection/: primary-selection-v1.xml
staging/refresh-cycle/: README  refresh-cycle-v1.xml
staging/relative-pointer/: relative-pointer-v1.xml
staging/text-input/: text-input-v3.xml
staging/transactions/: README
staging/wm-gestures/: README  wm-gestures-v1.xml
staging/xdg-dbus-annotation/: README  xdg-dbus-annotation-v1.xml
staging/xdg-decoration/: xdg-decoration-v1.xml
staging/xdg-foreign/: xdg-foreign-v2.xml
staging/xdg-pip/: README  xdg-pip-v1.xml
staging/xdg-splash/: README  xdg-splash-v1.xml
staging/xdg-toplevel-drag/: xdg-toplevel-drag-v1.xml
staging/xdg-toplevel-icon/: xdg-toplevel-icon-v1.xml
tests/: meson.build
unstable/ext-blur/: README
unstable/ext-workspace/: README  ext-workspace-unstable-v1.xml
unstable/input-timestamps/: README
unstable/keyboard-shortcuts-inhibit/: README
unstable/linux-dmabuf/: linux-dmabuf-unstable-v1.xml
unstable/pointer-constraints/: README  pointer-constraints-unstable-v1.xml
unstable/pointer-gestures/: README
(+13 files in other folders)
